solved the problem fo edu img not showing fully in the bottom

--- a/styles.css
+++ b/styles.css
@@ -417,8 +417,8 @@ body.dark-theme {
 }
 
 .edu__card img {
-  width: 500px;
-  height: 190px;
+  width: 100%;
+  height: 100%;
 }
 
 .edu__modal {
